--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_4bsOMg82Y"
-      REACT_APP_CLIENT_ID: "3fhajjj9kerp8ofj1bfmim0d0f"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_jhWECFHse"
+      REACT_APP_CLIENT_ID: "3gub19c6stqe74007khjm00mu4"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
